Ui fixes & broken links,Map fixed & form submits

--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@
 /*------------------------------------------------------------------
 [Master Stylesheet]
 
-Project:  TATEE
+Project:  Lasvegas
 Version:	1.0
 Last change:	11/2018 [Add Define a table of contents Link]
 Assigned to:	HAU NGUYEN
